added function for addition ExamScore for authorization Applicant